Bug 1147662: LexicalCheck should be a guard, so as not to be removed; r=shu