js/src/jit-test/tests/ion/lexical-check-4.js
@@ -1,0 +1,15 @@
+var caught = false;
+try {
+    (function() {
+        let x = (function f(y) {
+            if (y == 0) {
+                x
+                return
+            }
+            return f(y - 1)
+        })(3)
+    })()
+} catch(e) {
+    caught = true;
+}
+assertEq(caught, true);
